CHANGE PIPE LINE

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,33 +1,33 @@
-name: Node.js CI/CD Pipeline
+name: Deploy to Vercel
 
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
-  pull_request:
-    branches:
-      - main  # Trigger on pull requests targeting the main branch
+      - main  # Deploy when code is pushed to the 'main' branch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest  # Define the runner environment (Ubuntu for Linux-based CI)
+  deploy:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2  # Checkout the code from the repository
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'  # Use Node.js version 14
+          node-version: '14'
 
       - name: Install dependencies
-        run: npm install  # Install the project dependencies
+        run: npm install
 
-      - name: Run Tests
-        run: npm test  # Run your tests (you should have tests set up)
+      - name: Build project
+        run: npm run build  # If you have a build script
 
-      - name: Build and Deploy (optional)
-        run: |
-          npm run build  # Build the project (optional step if you have a build process)
-          npm run deploy  # You can configure your deploy command here (optional)
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-args: '--prod'
