--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Run ESLint
-        run: npm run lint  
+        run: npx eslint app.ts --max-warnings=0
 
       - name: Install Vercel CLI
         run: npm install -g vercel  # Install the Vercel CLI
