--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
-     "lint": "eslint 'src/**/*.{js,ts,tsx}' --max-warnings=0"
+   "lint": "eslint 'app.ts' --max-warnings=0"
   },
   "keywords": [],
   "author": "",
